add android studio 4.2 canray 9 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,50 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.2 Canary 9 -->
+                            <tr>
+                                <td rowspan="6">4.2 Canary 9</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.9/android-studio-ide-202.6795674-windows.exe">android-studio-ide-202.6795674-windows.exe</a>
+                                </td>
+                                <td>936300648 bytes</td>
+                                <td>cd2b947b7c281c5a2892ab6f1801f6de8b3de8f494d763b5d0b0ccf1c81d9ca4</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1giizvgpkmlj31920mc76d.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.9/android-studio-ide-202.6795674-windows.zip">android-studio-ide-202.6795674-windows.zip</a>
+                                </td>
+                                <td>945486961 bytes</td>
+                                <td>b7174c262a9ba81152a13a14b84ec959a4cf126a9e4a957bab96a34db1c87288</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.9/android-studio-ide-202.6795674-mac.zip">android-studio-ide-202.6795674-mac.zip</a>
+                                </td>
+                                <td>944479645 bytes</td>
+                                <td>11505a2cc661ae10572711ca0c3b3622311c21a483cedddfa6206a562a1b4901</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.9/android-studio-ide-202.6795674-linux.tar.gz">android-studio-ide-202.6795674-linux.tar.gz</a>
+                                </td>
+                                <td>956208593 bytes</td>
+                                <td>20bee37460bb5fc9abe5eca1f18a83eb3f5617c30ee40b455d569411ff938626</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.9/android-studio-ide-202.6795674-cros.deb">android-studio-ide-202.6795674-cros.deb</a>
+                                </td>
+                                <td>813655496 bytes</td>
+                                <td>8ded6a713d7a4cc5bf1098664d39ef7314915367143bc2234bff6a7d4d3e2ec7</td>
+                            </tr>
                             <!-- 4.1 Beta 5 -->
                             <tr>
                                 <td rowspan="6">4.1 RC2</td>
@@ -366,7 +410,7 @@
                             <tr>
                                 <td>Windows IDE 安装版 (64-bit)</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.7/android-studio-ide-202.6787931-windows.exe">android-studio-ide-202.6787931-windows.exe</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.8/android-studio-ide-202.6787931-windows.exe">android-studio-ide-202.6787931-windows.exe</a>
                                 </td>
                                 <td>935909976 bytes</td>
                                 <td>2b21f349f62ef78c90f31763da218c2bb5dcdcd22a8a61c29189cb333c2e6482</td>
@@ -374,7 +418,7 @@
                             </tr>
                             <tr>
                                 <td>Windows (64-bit)</td>
-                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.7/android-studio-ide-202.6787931-windows.zip">android-studio-ide-202.6787931-windows.zip</a>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.8/android-studio-ide-202.6787931-windows.zip">android-studio-ide-202.6787931-windows.zip</a>
                                 </td>
                                 <td>945097170 bytes</td>
                                 <td>86b37933477d3fa51de7db58e3b364c9aa8dd9d2972c5e03ba1ef7d906a8448c</td>
@@ -382,7 +426,7 @@
                             <tr>
                                 <td>Mac OS X</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.7/android-studio-ide-202.6787931-mac.zip">android-studio-ide-202.6787931-mac.zip</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.8/android-studio-ide-202.6787931-mac.zip">android-studio-ide-202.6787931-mac.zip</a>
                                 </td>
                                 <td>944083163 bytes</td>
                                 <td>d63be241c8fb279c4f4f1e30ffc6c840dd12995dd59905ae32d91ea1d646f715</td>
@@ -390,7 +434,7 @@
                             <tr>
                                 <td>Linux</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.7/android-studio-ide-202.6787931-linux.tar.gz">android-studio-ide-202.6787931-linux.tar.gz</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.8/android-studio-ide-202.6787931-linux.tar.gz">android-studio-ide-202.6787931-linux.tar.gz</a>
                                 </td>
                                 <td>953907026 bytes</td>
                                 <td>c2d862f0d6b2aff485e7ba21de18bbb955db60f5a1c115bceadfce2644feae78</td>
@@ -398,7 +442,7 @@
                             <tr>
                                 <td>Chrome OS</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.7/android-studio-ide-202.6787931-cros.deb">android-studio-ide-202.6787931-cros.deb</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.8/android-studio-ide-202.6787931-cros.deb">android-studio-ide-202.6787931-cros.deb</a>
                                 </td>
                                 <td>812034580 bytes</td>
                                 <td>64f485dc7543290d268ac73f033bdda2d1fdde2fc0ed9bc2adb1b2cb8ed70e7d</td>
