add android studio 4.2 canary 11 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,50 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.2 Canary 11 -->
+                            <tr>
+                                <td rowspan="6">4.2 Canary 11</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.10/android-studio-ide-202.6825553-windows.exe">android-studio-ide-202.6825553-windows.exe</a>
+                                </td>
+                                <td>965946664 bytes</td>
+                                <td>5386e0f91fa131afc61e0b6bdcd00e59f3450db5a17c12c3a1a50395d77a64d1</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1givlgws1mvj319e0mw40l.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.10/android-studio-ide-202.6825553-windows.zip">android-studio-ide-202.6825553-windows.zip</a>
+                                </td>
+                                <td>975112774 bytes</td>
+                                <td>b1526a9827e63012fe2f3d1a11c0748b96858b4142fb66a59336d131a8a5e68d</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.10/android-studio-ide-202.6825553-mac.zip">android-studio-ide-202.6825553-mac.zip</a>
+                                </td>
+                                <td>977252108 bytes</td>
+                                <td>f805b4b9fdcffb4e9d8d34e2f7a287a5ad5f14ed4780c8ffc9823a69b46206bd</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.10/android-studio-ide-202.6825553-linux.tar.gz">android-studio-ide-202.6825553-linux.tar.gz</a>
+                                </td>
+                                <td>990529016 bytes</td>
+                                <td>95adc9d26814c49039d25d4f2ebf453cc288e50624a0146b895caedda56aee2a</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.10/android-studio-ide-202.6825553-cros.deb">android-studio-ide-202.6825553-cros.deb</a>
+                                </td>
+                                <td>837135416 bytes</td>
+                                <td>20ef37effe8b4a99b90db42e1e13d5d626740dd9a5df8f6897c5fff212015765</td>
+                            </tr>
                             <!-- 4.2 Canary 10 -->
                             <tr>
                                 <td rowspan="6">4.2 Canary 10</td>
