add android studio 4.1 RC3 links

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                                 </td>
                                 <td>965946664 bytes</td>
                                 <td>5386e0f91fa131afc61e0b6bdcd00e59f3450db5a17c12c3a1a50395d77a64d1</td>
-                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1givlgws1mvj319e0mw40l.jpg">查看</a></td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1giw8wvt9soj31ay0myjth.jpg">查看</a></td>
                             </tr>
                             <tr>
                                 <td>Windows (64-bit)</td>
@@ -358,6 +358,50 @@
                                 </td>
                                 <td>837135416 bytes</td>
                                 <td>20ef37effe8b4a99b90db42e1e13d5d626740dd9a5df8f6897c5fff212015765</td>
+                            </tr>
+                            <!-- 4.1 RC3 -->
+                            <tr>
+                                <td rowspan="6">4.1 RC3</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.17/android-studio-ide-201.6823847-windows.exe">android-studio-ide-201.6823847-windows.exe</a>
+                                </td>
+                                <td>940463848 bytes</td>
+                                <td>cea2153712e7682b11082d345ffa900f8e94b4efe4574cb4e21c1d5d18b48f02</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1giw8vyfhc3j31aw0n2dhx.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.17/android-studio-ide-201.6823847-windows.zip">android-studio-ide-201.6823847-windows.zip</a>
+                                </td>
+                                <td>944604420 bytes</td>
+                                <td>ec3c7dd8acebfbfd7da83991abaaca4b69261d897741aad2bc3a288398e37282</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.17/android-studio-ide-201.6823847-mac.zip">android-studio-ide-201.6823847-mac.zip</a>
+                                </td>
+                                <td>919686156 bytes</td>
+                                <td>c788ba6f1db45e8a9d24f7cedcd5785ee66e0270ff57ad3b5abca748403fa1fa</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.17/android-studio-ide-201.6823847-linux.tar.gz">android-studio-ide-201.6823847-linux.tar.gz</a>
+                                </td>
+                                <td>926163177 bytes</td>
+                                <td>3945f36843148fa65f020100f68ea9eea675835416d837cf7e34e26ed834a8fc</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.17/android-studio-ide-201.6823847-cros.deb">android-studio-ide-201.6823847-cros.deb</a>
+                                </td>
+                                <td>779505740 bytes</td>
+                                <td>a9bc6647d83c0d22b370fd3d6c9b9cf9a9bbf41497586dfd510c4511bd5b67cf</td>
                             </tr>
                             <!-- 4.2 Canary 10 -->
                             <tr>
@@ -447,7 +491,7 @@
                                 <td>813655496 bytes</td>
                                 <td>8ded6a713d7a4cc5bf1098664d39ef7314915367143bc2234bff6a7d4d3e2ec7</td>
                             </tr>
-                            <!-- 4.1 Beta 5 -->
+                            <!-- 4.1 RC3 -->
                             <tr>
                                 <td rowspan="6">4.1 RC2</td>
                             </tr>
