Fixed Android Fragment Code Generator link error

--- a/index.html
+++ b/index.html
@@ -4425,7 +4425,7 @@
                             <tr>
                                 <td align="left">Android Fragment Code Generator</td>
                                 <td align="left"></td>
-                                <td align="center"><a href="http://techisfun.github.io/pages/android-fragment-generator/">下载</a>
+                                <td align="center"><a href="http://www.andreamaglie.com/fragment-generator-android/">下载</a>
                                 </td>
                                 <td align="center"></td>
                             </tr>
