--- a/index.html
+++ b/index.html
@@ -315,6 +315,102 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.2 Canary 14 -->
+                            <tr>
+                                <td rowspan="6">4.2 Canary 14</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.14/android-studio-ide-202.6907010-windows.exe">android-studio-ide-202.6907010-windows.exe</a>
+                                </td>
+                                <td>972064368 bytes</td>
+                                <td>427abc2cb45ab53fa7b79fa0d7f84ae045c41dd5b422e2e5b656d3503d94b422</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1gjwuampg8gj30mo0b2wf0.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.14/android-studio-ide-202.6907010-windows.zip">android-studio-ide-202.6907010-windows.zip</a>
+                                </td>
+                                <td>979390164 bytes</td>
+                                <td>942e5338f38b0eeb0f9c1088bd16839eabe61cc27a330c872a9a9b70b7c20e87</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.14/android-studio-ide-202.6907010-mac.zip">android-studio-ide-202.6907010-mac.zip</a>
+                                </td>
+                                <td>979483234 bytes</td>
+                                <td>d434e58303476844ce9bfaa51c6b449731dd0a19b7c076aec565c048a7b3f5a8</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.14/android-studio-ide-202.6907010-linux.tar.gz">android-studio-ide-202.6907010-linux.tar.gz</a>
+                                </td>
+                                <td>995659865 bytes</td>
+                                <td>03a9e5e2e376e4258e8e9c01bce406dba1199c93f9b4dbd2ac6b6817e2109ad6</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.14/android-studio-ide-202.6907010-cros.deb">android-studio-ide-202.6907010-cros.deb</a>
+                                </td>
+                                <td>842123328 bytes</td>
+                                <td>0375aacd6531d071a54e8a0be51f3ac37e7c4e1453d6cee058fc093dd3b8a27e</td>
+                            </tr>
+                            <!-- 4.1.0 正式版 -->
+                            <tr>
+                                <td rowspan="7">4.1 正式版</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.19/android-studio-ide-201.6858069-windows.exe">android-studio-ide-201.6858069-windows.exe</a>
+                                </td>
+                                <td>940468656 bytes</td>
+                                <td>127bf487a87267522fa3532b980298b667eb7acde68d805084e9cf1cfc608251</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1gjwtx9aoehj30nn0c4gm9.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.19/android-studio-ide-201.6858069-windows.zip">android-studio-ide-201.6858069-windows.zip</a>
+                                </td>
+                                <td>944610487 bytes</td>
+                                <td>7237d03cf680c1156589b2e0f7e3205139581f898fbb528b8ad05d3cee57e02a</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.19/android-studio-ide-201.6858069-mac.dmg">android-studio-ide-201.6858069-mac.dmg</a>
+                                </td>
+                                <td>920676681 bytes</td>
+                                <td>e65be362e01b6272007e5b6009d6b33df4aa48f03ec8d15de9997547476b5e00</td>
+                            </tr>
+                            <tr>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.19/android-studio-ide-201.6858069-mac.zip">android-studio-ide-201.6858069-mac.zip</a>
+                                </td>
+                                <td>919691135 bytes</td>
+                                <td>2f2c249cc0f1ee44e054917012c6703456f343cb29477289833f04ac10923e1b</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.0.19/android-studio-ide-201.6858069-linux.tar.gz">android-studio-ide-201.6858069-linux.tar.gz</a>
+                                </td>
+                                <td>926181537 bytes</td>
+                                <td>4b9521fc4a6313ad65ff3e14b0f3fb50427d464fe14227555565f46e0ffad202</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.0.19/android-studio-ide-201.6858069-cros.deb">android-studio-ide-201.6858069-cros.deb</a>
+                                </td>
+                                <td>779526572 bytes</td>
+                                <td>925bd9632d723dabd16efeb740a3e9c6ba3e25a30d02915b67f09131aa7b38d6</td>
+                            </tr>
                             <!-- 4.0.2 正式版 -->
                             <tr>
                                 <td rowspan="7">4.0.2 正式版</td>
