add android studio 4.2 canary 15 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,50 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.2 Canary 15 -->
+                            <tr>
+                                <td rowspan="6">4.2 Canary 15</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.15/android-studio-ide-202.6922807-windows.exe">android-studio-ide-202.6922807-windows.exe</a>
+                                </td>
+                                <td>972084616 bytes</td>
+                                <td>2dcc2dce84f7e9bd63739305fa874069f0648236d9e1d989b2ffc2ea8d884b7c</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/0081Kckwly1gk709pf22tj319a0m4gnp.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.15/android-studio-ide-202.6922807-windows.zip">android-studio-ide-202.6922807-windows.zip</a>
+                                </td>
+                                <td>979409964 bytes</td>
+                                <td>c8df7dfea78d8277b4d786ac1c9559b30ff6421e982c7465360d5745d2b05705</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.15/android-studio-ide-202.6922807-mac.zip">android-studio-ide-202.6922807-mac.zip</a>
+                                </td>
+                                <td>979497715 bytes</td>
+                                <td>10f304850ef3b62011bb948a82eced223a9f48a461fd547fdc45579d26ec92b9</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.15/android-studio-ide-202.6922807-linux.tar.gz">android-studio-ide-202.6922807-linux.tar.gz</a>
+                                </td>
+                                <td>995660508 bytes</td>
+                                <td>3d714d9cf4896dda7d36d90c0d1dd5abebe95aa77ce48a361665cf8512d193ff</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.15/android-studio-ide-202.6922807-cros.deb">android-studio-ide-202.6922807-cros.deb</a>
+                                </td>
+                                <td>842168212 bytes</td>
+                                <td>310b7da009f88763a6b8137807e835eb55aef104466a0018eb83b64580d8b37d</td>
+                            </tr>
                             <!-- 4.2 Canary 14 -->
                             <tr>
                                 <td rowspan="6">4.2 Canary 14</td>
