add android studio 4.2 canary 16 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,50 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.2 Canary 16 -->
+                            <tr>
+                                <td rowspan="6">4.2 Canary 16</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.16/android-studio-ide-202.6939830-windows.exe">android-studio-ide-202.6939830-windows.exe</a>
+                                </td>
+                                <td>972651408 bytes</td>
+                                <td>6a85d682d4e3af7c510689c35da9162b9f3bbc45f78f5d01cbdc11398a4c01c4</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/0081Kckwly1gkjqt3jvkbj30nd0bbt99.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.16/android-studio-ide-202.6939830-windows.zip">android-studio-ide-202.6939830-windows.zip</a>
+                                </td>
+                                <td>979977472 bytes</td>
+                                <td>b516844579b3bd8efded75adad3df6cdee3631e2db8fdeae74c2d86a0e4c4a8a</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.16/android-studio-ide-202.6939830-mac.zip">android-studio-ide-202.6939830-mac.zip</a>
+                                </td>
+                                <td>979703900 bytes</td>
+                                <td>e315f6b98979a5882a64ca8cc979acfd2accbe57b2e6b0ea8ade5cc77587877c</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.16/android-studio-ide-202.6939830-linux.tar.gz">android-studio-ide-202.6939830-linux.tar.gz</a>
+                                </td>
+                                <td>996592755 bytes</td>
+                                <td>d97874191e011d923aa1f772308da272bced236066887593fb56c4648679f081</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.16/android-studio-ide-202.6939830-cros.deb">android-studio-ide-202.6939830-cros.deb</a>
+                                </td>
+                                <td>842273912 bytes</td>
+                                <td>ed84e55a092c6281736d78c152d6f33c208b6e5aa05461a5917668f16aa26329</td>
+                            </tr>
                             <!-- 4.2 Canary 15 -->
                             <tr>
                                 <td rowspan="6">4.2 Canary 15</td>
