add android studio 4.1.1 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,58 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.1.1 正式版 -->
+                            <tr>
+                                <td rowspan="7">4.1.1 正式版</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.1.0/android-studio-ide-201.6953283-windows.exe">android-studio-ide-201.6953283-windows.exe</a>
+                                </td>
+                                <td>940548560 bytes</td>
+                                <td>88d1576b5f672e67035bc4cde55697cf4cc0e63f9c9740f82f4ef8e09ddb05d4</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/0081Kckwly1gklbcpnqtgj30nq0c2js1.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.1.0/android-studio-ide-201.6953283-windows.zip">android-studio-ide-201.6953283-windows.zip</a>
+                                </td>
+                                <td>944622090 bytes</td>
+                                <td>68717853fc1a99b51a0098827275e090606b07d5d4ebcb1a311c1029497ac702</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.1.0/android-studio-ide-201.6953283-mac.dmg">android-studio-ide-201.6953283-mac.dmg</a>
+                                </td>
+                                <td>920639485 bytes</td>
+                                <td>e9ca26f3a3da9610dcaa2878d412657d8ff31f1bea0e183ecaa0b2c08042edc3</td>
+                            </tr>
+                            <tr>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.1.0/android-studio-ide-201.6953283-mac.zip">android-studio-ide-201.6953283-mac.zip</a>
+                                </td>
+                                <td>919707451 bytes</td>
+                                <td>7d015e58a5dc8adb82406a59d86ecb0c9f6a952cecc2c39d9d5370a3fb2fd1f4</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.1.0/android-studio-ide-201.6953283-linux.tar.gz">android-studio-ide-201.6953283-linux.tar.gz</a>
+                                </td>
+                                <td>926213072 bytes</td>
+                                <td>68032184959c54576f119b7c7c8ded175d848374f3954fa450530d78260dd68b</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.1.0/android-studio-ide-201.6953283-cros.deb">android-studio-ide-201.6953283-cros.deb</a>
+                                </td>
+                                <td>779517792 bytes</td>
+                                <td>7621210773ef2ddaeccbbd4ca26c2f6246c85c0adc9c65290b8269d0cd3a7d4e</td>
+                            </tr>
                             <!-- 4.2 Canary 16 -->
                             <tr>
                                 <td rowspan="6">4.2 Canary 16</td>
