--- a/index.html
+++ b/index.html
@@ -261,14 +261,14 @@
         <div class="container body-container">
             <div class="row">
                 <div>
-                    <p class="center">
+                    <!-- <p class="center">
                         <a class="top-ads-link text-center" href="https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io" title="GitAds" onclick="trackOutboundLink('https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io', 'GitAds', 'click');" target="_blank">
                             <span class="ads-text">广告</span><img src="https://images.gitads.io/AndroidDevTools">
                         </a>
                         <a class="top-ads-link text-center" href="https://www.androidweekly.io" title="Android开发技术周报" onclick="trackOutboundLink('https://www.androidweekly.io', 'AndroidWeekly-top', 'click');" target="_blank">
                             <img class="top-ads-img" src="https://tva1.sinaimg.cn/large/007S8ZIlly1ggx7qxpfv5j30p00go75l.jpg">
                         </a>
-                    </p>
+                    </p> -->
                     <h1 id="introduction" class="content-title" algin="center">AndroidDevTools</h1>
                     <p>收集整理Android开发所需的Android SDK、开发中用到的工具、Android开发教程、Android设计规范，免费的设计素材等。欢迎大家推荐自己在Android开发过程中用的好用的工具、学习开发教程、用到设计素材。如果你觉得本站对你有用，你可以点击底部的分享按钮，把本站分享到社交网络让你的小伙伴和更多的人知道。</p>
                     <p>或者可以考虑对本站<a href="./donate.html"><strong>捐赠</strong></a>支持下，支持我把本站做的更好，帮助更多的人。目前支持支付宝和微信，金额随意。</p>
