add android studio 4.2 beta1 and 2020.3.1 canary links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,94 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2020.3.1.1 Canary-->
+                            <tr>
+                                <td rowspan="6">2020.3.1.1 Canary</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.1/android-studio-ide-972674480-windows.exe">android-studio-ide-972674480-windows.exe</a>
+                                </td>
+                                <td>991069344 bytes</td>
+                                <td>4094a480ddc7bf1c8b264c37e1da14b18f9f448167630f470c8e844dc598d2e6</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/0081Kckwly1gl9rtynbbsj30mw0b3t99.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.1/android-studio-ide-972674480-windows.zip">android-studio-ide-972674480-windows.zip</a>
+                                </td>
+                                <td>998433491 bytes</td>
+                                <td>f20cd5be2430864db8b3febfc7669e9b7554a0dbe0ec613987e717e3422639cb</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.1/android-studio-ide-972674480-mac.zip">android-studio-ide-972674480-mac.zip</a>
+                                </td>
+                                <td>999870326 bytes</td>
+                                <td>47b7565136c7378c77da1964a3711ab6d09f5ace3f04bd87a62b13992db5dd9a</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.1/android-studio-ide-972674480-linux.tar.gz">android-studio-ide-972674480-linux.tar.gz</a>
+                                </td>
+                                <td>1016767041 bytes</td>
+                                <td>4c8547c454ea9edd432f800affaae3a752ddd6d6a8f95429b255618cf2e6ddae</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.1/android-studio-ide-972674480-cros.deb">android-studio-ide-972674480-cros.deb</a>
+                                </td>
+                                <td>869099280 bytes</td>
+                                <td>cc45b81d22c4c70cbb510c22d184b701286762df2265e7b075600202f0955ead</td>
+                            </tr>
+                            <!-- 4.2 Beta1 -->
+                            <tr>
+                                <td rowspan="6">4.2 Beta1</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.17/android-studio-ide-972674480-windows.exe">android-studio-ide-972674480-windows.exe</a>
+                                </td>
+                                <td>972674480 bytes</td>
+                                <td>5b27feed7d5c2581d1f9d3b66f739f48ac026f9621a7283be61da708fc5801ae</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/0081Kckwly1gl9rqripauj30nd0b2dig.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.17/android-studio-ide-972674480-windows.zip">android-studio-ide-972674480-windows.zip</a>
+                                </td>
+                                <td>979997025 bytes</td>
+                                <td>370a85fa184681b4976eeffde12e9a1db3ba6364faf599ae85d1318ad0eb7d69</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.17/android-studio-ide-972674480-mac.zip">android-studio-ide-972674480-mac.zip</a>
+                                </td>
+                                <td>979723886 bytes</td>
+                                <td>c441469cb7dea7b9faa4309101580694539268f16704fc3a4e6ee7925470223d</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.17/android-studio-ide-972674480-linux.tar.gz">android-studio-ide-972674480-linux.tar.gz</a>
+                                </td>
+                                <td>996614253 bytes</td>
+                                <td>271245f1daa8c5d1c2b29f92eb246b09ddde5028231513b50decfef6c302191f</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.17/android-studio-ide-972674480-cros.deb">android-studio-ide-972674480-cros.deb</a>
+                                </td>
+                                <td>842322224 bytes</td>
+                                <td>0d9f64483c2127e9d085446830f736a299997b5bfbbd154ed0f9950296101d45</td>
+                            </tr>
                             <!-- 4.1.1 正式版 -->
                             <tr>
                                 <td rowspan="7">4.1.1 正式版</td>
