--- a/index.html
+++ b/index.html
@@ -315,14 +315,58 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <!-- 2020.3.1 Canary-->
+                            <!-- 2020.3.1 Canary 2-->
                             <tr>
-                                <td rowspan="6">2020.3.1 Canary</td>
+                                <td rowspan="6">2020.3.1 Canary 2</td>
                             </tr>
                             <tr>
                                 <td>Windows IDE 安装版 (64-bit)</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.1/android-studio-ide-972674480-windows.exe">android-studio-ide-972674480-windows.exe</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.2/android-studio-ide-202.7006259-windows.exe">android-studio-ide-202.7006259-windows.exe</a>
+                                </td>
+                                <td>991169536 bytes</td>
+                                <td>13ee3c7303bd4113e01737d4a0cd95137ab89db5fb454b067ca11cd37a65e42a</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/0081Kckwgy1glc41ou5zvj30ma0b2aal.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.2/android-studio-ide-202.7006259-windows.zip">android-studio-ide-202.7006259-windows.zip</a>
+                                </td>
+                                <td>998534758 bytes</td>
+                                <td>bcda9db382d103f7d8f04a7cd9c2934432876d4439d414a19c4647af6ba2cf09</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.2/android-studio-ide-202.7006259-mac.zip">android-studio-ide-202.7006259-mac.zip</a>
+                                </td>
+                                <td>999975022 bytes</td>
+                                <td>e767bba3b9ed88e922d6a1dcce64900237c65045e43d30de6ce29c5f90f1b5f7</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.2/android-studio-ide-202.7006259-linux.tar.gz">android-studio-ide-202.7006259-linux.tar.gz</a>
+                                </td>
+                                <td>1016868192 bytes</td>
+                                <td>85d99188637b008e64433eaac50b6de23f2ca484a8833525a33b4017bacb8bb4</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.2/android-studio-ide-202.7006259-cros.deb">android-studio-ide-202.7006259-cros.deb</a>
+                                </td>
+                                <td>869182272 bytes</td>
+                                <td>87dfb257cd8426c2a42416350295a9fda2aa9e4d95734c6060fd4a4270db5622</td>
+                            </tr>
+                            <!-- 2020.3.1 Canary 1-->
+                            <tr>
+                                <td rowspan="6">2020.3.1 Canary 1</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.1/android-studio-ide-202.6983675-windows.exe">android-studio-ide-202.6983675-windows.exe</a>
                                 </td>
                                 <td>991069344 bytes</td>
                                 <td>4094a480ddc7bf1c8b264c37e1da14b18f9f448167630f470c8e844dc598d2e6</td>
@@ -330,7 +374,7 @@
                             </tr>
                             <tr>
                                 <td>Windows (64-bit)</td>
-                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.1/android-studio-ide-972674480-windows.zip">android-studio-ide-972674480-windows.zip</a>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.1/android-studio-ide-202.6983675-windows.zip">android-studio-ide-202.6983675-windows.zip</a>
                                 </td>
                                 <td>998433491 bytes</td>
                                 <td>f20cd5be2430864db8b3febfc7669e9b7554a0dbe0ec613987e717e3422639cb</td>
@@ -338,7 +382,7 @@
                             <tr>
                                 <td>Mac OS X</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.1/android-studio-ide-972674480-mac.zip">android-studio-ide-972674480-mac.zip</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.1/android-studio-ide-202.6983675-mac.zip">android-studio-ide-202.6983675-mac.zip</a>
                                 </td>
                                 <td>999870326 bytes</td>
                                 <td>47b7565136c7378c77da1964a3711ab6d09f5ace3f04bd87a62b13992db5dd9a</td>
@@ -346,7 +390,7 @@
                             <tr>
                                 <td>Linux</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.1/android-studio-ide-972674480-linux.tar.gz">android-studio-ide-972674480-linux.tar.gz</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.1/android-studio-ide-202.6983675-linux.tar.gz">android-studio-ide-202.6983675-linux.tar.gz</a>
                                 </td>
                                 <td>1016767041 bytes</td>
                                 <td>4c8547c454ea9edd432f800affaae3a752ddd6d6a8f95429b255618cf2e6ddae</td>
@@ -354,7 +398,7 @@
                             <tr>
                                 <td>Chrome OS</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.1/android-studio-ide-972674480-cros.deb">android-studio-ide-972674480-cros.deb</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.1/android-studio-ide-202.6983675-cros.deb">android-studio-ide-202.6983675-cros.deb</a>
                                 </td>
                                 <td>869099280 bytes</td>
                                 <td>cc45b81d22c4c70cbb510c22d184b701286762df2265e7b075600202f0955ead</td>
@@ -366,15 +410,15 @@
                             <tr>
                                 <td>Windows IDE 安装版 (64-bit)</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.17/android-studio-ide-972674480-windows.exe">android-studio-ide-972674480-windows.exe</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.17/android-studio-ide-202.6987402-windows.exe">android-studio-ide-202.6987402-windows.exe</a>
                                 </td>
-                                <td>972674480 bytes</td>
+                                <td>202.6987402 bytes</td>
                                 <td>5b27feed7d5c2581d1f9d3b66f739f48ac026f9621a7283be61da708fc5801ae</td>
                                 <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/0081Kckwly1gl9rqripauj30nd0b2dig.jpg">查看</a></td>
                             </tr>
                             <tr>
                                 <td>Windows (64-bit)</td>
-                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.17/android-studio-ide-972674480-windows.zip">android-studio-ide-972674480-windows.zip</a>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.17/android-studio-ide-202.6987402-windows.zip">android-studio-ide-202.6987402-windows.zip</a>
                                 </td>
                                 <td>979997025 bytes</td>
                                 <td>370a85fa184681b4976eeffde12e9a1db3ba6364faf599ae85d1318ad0eb7d69</td>
@@ -382,7 +426,7 @@
                             <tr>
                                 <td>Mac OS X</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.17/android-studio-ide-972674480-mac.zip">android-studio-ide-972674480-mac.zip</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.17/android-studio-ide-202.6987402-mac.zip">android-studio-ide-202.6987402-mac.zip</a>
                                 </td>
                                 <td>979723886 bytes</td>
                                 <td>c441469cb7dea7b9faa4309101580694539268f16704fc3a4e6ee7925470223d</td>
@@ -390,7 +434,7 @@
                             <tr>
                                 <td>Linux</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.17/android-studio-ide-972674480-linux.tar.gz">android-studio-ide-972674480-linux.tar.gz</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.17/android-studio-ide-202.6987402-linux.tar.gz">android-studio-ide-202.6987402-linux.tar.gz</a>
                                 </td>
                                 <td>996614253 bytes</td>
                                 <td>271245f1daa8c5d1c2b29f92eb246b09ddde5028231513b50decfef6c302191f</td>
@@ -398,7 +442,7 @@
                             <tr>
                                 <td>Chrome OS</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.17/android-studio-ide-972674480-cros.deb">android-studio-ide-972674480-cros.deb</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.17/android-studio-ide-202.6987402-cros.deb">android-studio-ide-202.6987402-cros.deb</a>
                                 </td>
                                 <td>842322224 bytes</td>
                                 <td>0d9f64483c2127e9d085446830f736a299997b5bfbbd154ed0f9950296101d45</td>
