--- a/index.html
+++ b/index.html
@@ -315,6 +315,94 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2020.3.1 Canary 3-->
+                            <tr>
+                                <td rowspan="6">2020.3.1 Canary 3</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.3/android-studio-ide-2020.3.1.3-windows.exe">android-studio-ide-2020.3.1.3-windows.exe</a>
+                                </td>
+                                <td>991338696 bytes</td>
+                                <td>203ef84f64f22bd26cee392558c059ed647f2729d095f5a211e1687eddc08b0c</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/0081Kckwly1glod3u6wcjj319q0m6tao.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.3/android-studio-ide-2020.3.1.3-windows.zip">android-studio-ide-2020.3.1.3-windows.zip</a>
+                                </td>
+                                <td>998700794 bytes</td>
+                                <td>b17a874a4fd62d91a39af4d90f11ca22919dcbe73ce1f1849266536a7add6819</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.3/android-studio-ide-2020.3.1.3-mac.zip">android-studio-ide-2020.3.1.3-mac.zip</a>
+                                </td>
+                                <td>1000136732 bytes</td>
+                                <td>8c21f1994bfd8a6bbc8183beb5e852249a2782d89527fb8d6e6ced2f6437da5c</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.3/android-studio-ide-2020.3.1.3-linux.tar.gz">android-studio-ide-2020.3.1.3-linux.tar.gz</a>
+                                </td>
+                                <td>1017037354 bytes</td>
+                                <td>9df5089a4b3765aaad0c89eb452d8e6f5699f809de7d9b2f7f18657c8744a7db</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.3/android-studio-ide-2020.3.1.3-cros.deb">android-studio-ide-2020.3.1.3-cros.deb</a>
+                                </td>
+                                <td>869336512 bytes</td>
+                                <td>e52051c80824d405c39510d384a4574325c1b285fd3c68d089c1e1ec9e63a099</td>
+                            </tr>
+                            <!-- 4.2 Beta2 -->
+                            <tr>
+                                <td rowspan="6">4.2 Beta2</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.18/android-studio-ide-202.7008469-windows.exe">android-studio-ide-202.7008469-windows.exe</a>
+                                </td>
+                                <td>981717672 bytes</td>
+                                <td>442218ddf43225fd100ed1f082f9a46f6133a81f910955e3cd191ace5d4dd058</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/0081Kckwly1glocsti1q9j30nq0azq3h.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.18/android-studio-ide-202.7008469-windows.zip">android-studio-ide-202.7008469-windows.zip</a>
+                                </td>
+                                <td>989103685 bytes</td>
+                                <td>ca43e3433c8d65036df0fb41256f9dc1be43b12d7ed52f06e699a95b31ce6496</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.18/android-studio-ide-202.7008469-mac.zip">android-studio-ide-202.7008469-mac.zip</a>
+                                </td>
+                                <td>988821959 bytes</td>
+                                <td>536d7b15bd2f2540ed793995b98b9bfc0b4d7846e832209d0ecccc6971a45843</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.18/android-studio-ide-202.7008469-linux.tar.gz">android-studio-ide-202.7008469-linux.tar.gz</a>
+                                </td>
+                                <td>1005710712 bytes</td>
+                                <td>b0d269547d299a75db9229efa32f9aa235f500310120afd7f904adc82a89430c</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.18/android-studio-ide-202.7008469-cros.deb">android-studio-ide-202.7008469-cros.deb</a>
+                                </td>
+                                <td>849478472 bytes</td>
+                                <td>7474c4e06ba8460283916bcf68ae2e4ae34493e53a9147668bbc8bfb04d2e70b</td>
+                            </tr>
                             <!-- 2020.3.1 Canary 2-->
                             <tr>
                                 <td rowspan="6">2020.3.1 Canary 2</td>
@@ -412,7 +500,7 @@
                                 <td align="left">
                                     <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.17/android-studio-ide-202.6987402-windows.exe">android-studio-ide-202.6987402-windows.exe</a>
                                 </td>
-                                <td>202.6987402 bytes</td>
+                                <td>981717672 bytes</td>
                                 <td>5b27feed7d5c2581d1f9d3b66f739f48ac026f9621a7283be61da708fc5801ae</td>
                                 <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/0081Kckwly1gl9rqripauj30nd0b2dig.jpg">查看</a></td>
                             </tr>
